# rust-ascom-park-sensor

./: Cargo.toml  README.md  build.rs
config/: Cargo.toml  default.toml
config/src/: alpaca_server.rs  device_state.rs  errors.rs  main.rs  port_discovery.rs  serial_client.rs  telescope_client.rs
config/templates/: index.html  script.js  style.css
src/: alpaca_server.rs  connection_manager.rs  device_state.rs  discovery_server.rs  errors.rs  main.rs  port_discovery.rs  serial_client.rs  telescope_client.rs
templates/: index.html  script.js  style.css
