[package]
name = "telescope_park_bridge"
version = "0.2.1"
edition = "2021"

[dependencies]
# Serial communication
serialport = "4.3"
tokio-serial = "5.4"

# ASCOM Alpaca library
ascom-alpaca = { version = "1.0.0-beta.3", features = ["client", "telescope", "safetymonitor"] }

# HTTP server for web interface and ASCOM Alpaca API
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration and CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
include_dir = "0.7"

# For ASCOM device discovery on Windows
[target.'cfg(windows)'.dependencies]
winreg = "0.52"